# qday-clock

./: .gitignore  CHANGELOG.md  LICENSE  METHODOLOGY.md  README.md  THREAT_MODEL.md  pyproject.toml
.github/workflows/: ci.yml  pages-deploy.yml  refresh.yml
_refresh/: curator_manifest.json
data/: seed_signals.json  threshold_lock.json
docs/: ARCHITECTURE.md  GATE_CATALOG.md  SIGNAL_CATALOG.md
qday_clock/: __init__.py  build.py
qday_clock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
qday_clock/core/: __init__.py  canonical.py  errors.py  schemas.py  signing.py  time.py
qday_clock/extract/: __init__.py  axis_error_rate.py  axis_logical_qubits.py  axis_physical_scaling.py  axis_pqc_migration.py  axis_resource_estimate.py  classifier.py  keywords.py
qday_clock/ingest/: __init__.py  curator_client.py  seed_signals.py
qday_clock/render/: __init__.py  manifest.py  svg_clock.py  templates.py
qday_clock/score/: __init__.py  axes.py  clock.py  gates.py  gri_baseline.py  mosca.py  weights.py
qday_clock/verify/: __init__.py  replay.py
site/: CNAME  about.tmpl.html  dashboard.tmpl.html  index.tmpl.html  methodology.tmpl.html  sources.tmpl.html
site/assets/: clock.css
site/data/: clock_state.json
tests/: test_build.py  test_forbidden_language.py  test_smoke.py
tests/adversarial/: test_anti_stiffness_gate.py  test_contrast_saturation_gate.py  test_multi_source_confirmation_gate.py  test_roadmap_weight_cap_gate.py  test_single_source_cap_gate.py  test_stale_signal_gate.py  test_static_point_gate.py  (+1 more)
(+21 files in other folders)
